[package]
name = "guest"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
risc0-zkvm = { version = "3.0.1", default-features = false, features = ['std'] }
amaru-kernel = { git = "https://github.com/pragma-org/amaru.git", rev = "3d26591b1193c7e1d53dde9c187fa52ed97fd9a4" }
amaru-ledger = { git = "https://github.com/pragma-org/amaru.git", rev = "3d26591b1193c7e1d53dde9c187fa52ed97fd9a4" }
